--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Application Home Page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/general.css') }}">
 </head>
 <body>
     <h1>Welcome to the Employee Application Home Page</h1>
